--- a/Scripts/templates/index.html
+++ b/Scripts/templates/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <title>Escaping 2020 on Earth</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="static/css/style.css">
-  <!-- <link rel="stylesheet" href="static/css/d3Style.css"> -->
+  <link rel="stylesheet" href="../static/css/style.css">
+
 
 </head>
 
@@ -19,22 +19,30 @@
     <hr class="my-2">
     <p>ADD ADDITIONAL TEXT HERE</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="visualizations/planets.html" role="button">Planets</a>
-      <a class="btn btn-primary btn-lg" href="visualizations/species.html" role="button">Species</a>
-      <a class="btn btn-primary btn-lg" href="visualizations/starships.html" role="button">Starships</a>
-      <a class="btn btn-primary btn-lg" href="visualizations/vehicles.html" role="button">Vehicles</a>
+      <a class="btn btn-primary btn-lg" href="planets" role="button">Planets</a>
+      <a class="btn btn-primary btn-lg" href="species" role="button">Species</a>
+      <a class="btn btn-primary btn-lg" href="starships" role="button">Starships</a>
+      <a class="btn btn-primary btn-lg" href="vehicles" role="button">Vehicles</a>
     </p>
   </div>
-  
 
+  <div>{% for name in star.name %}
+      <p>{% for v in name %}
+        {{v}}
+        {% endfor %}
+      </p>
+    {% endfor %}
+  </div>
+  <!-- <div>{{star.name["0"]}}</div> -->
 
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script> -->
+
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script type="text/javascript" src="static/js/logic.js"></script>
+  <script type="text/javascript" src="../static/js/logic.js"></script>
+  <script type="text/javascript" src="../static/js/starship.js"></script>
 
 </body>
 </html>
