--- a/Scripts/templates/vehicles.html
+++ b/Scripts/templates/vehicles.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Planets</title>
+  <title>Vehicles</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="static/css/style.css">
 
@@ -19,10 +19,10 @@
     <p>It uses utility classes for typography and
        spacing to space content out within the larger container.</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="../index.html" role="button">Home</a>
-      <a class="btn btn-primary btn-lg" href="species.html" role="button">Species</a>
-      <a class="btn btn-primary btn-lg" href="starships.html" role="button">Starships</a>
-      <a class="btn btn-primary btn-lg" href="vehicles.html" role="button">Vehicles</a>
+      <a class="btn btn-primary btn-lg" href="/" role="button">Home</a>
+      <a class="btn btn-primary btn-lg" href="planets" role="button">Planets</a>
+      <a class="btn btn-primary btn-lg" href="species" role="button">Species</a>
+      <a class="btn btn-primary btn-lg" href="starships" role="button">Starships</a>
     </p>
   </div>
   
