finished planets dataviz

--- a/Scripts/templates/planets.html
+++ b/Scripts/templates/planets.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <title>Planets</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="static/css/style.css">
+  <link rel="stylesheet" href="../static/css/style.css">
+  <link rel="stylesheet" href="../static/css/d3Style.css">
 
 </head>
 
@@ -25,7 +26,7 @@
       <a class="btn btn-primary btn-lg" href="vehicles.html" role="button">Vehicles</a>
     </p>
   </div>
-  <div class="scatter"></div>
+  <div id="scatter"></div>
   <div>
     <table class="table table-striped">
       <thead>
@@ -43,7 +44,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script type="text/javascript" src="../static/js/planets2.js"></script>
+  <script type="text/javascript" src="../static/js/planets.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
 
 </body>
