--- a/Scripts/templates/planets.html
+++ b/Scripts/templates/planets.html
@@ -11,14 +11,13 @@
 </head>
 
 <body>
-
+  <div class="page">
   <div class="jumbotron text-center">
     <h1 class="display-3">Escaping 2020 on Earth</h1>
     <p class="lead text-left">After experiencing the whirlwind that has been the year 2020, our group has decided to search for an alternative home.  Through the examination of planets, species, and climates, as well as an analysis of spacecraft, we will determine the best place to relocate.
     </p>
     <hr class="my-2">
-    <p>It uses utility classes for typography and
-       spacing to space content out within the larger container.</p>
+    <p>This page displays the data of the different planets in the Star Wars universe</p>
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="/" role="button">Home</a>
       <a class="btn btn-primary btn-lg" href="species" role="button">Species</a>
@@ -27,6 +26,15 @@
     </p>
   </div>
   <div id="scatter"></div>
+  <div>
+    <button id="orbital">Orbital</button>
+    <button id="rotation">Rotation</button>
+    <button id="population">Population</button>
+    <button id="diameter">Diameter</button>
+    <div class="bar"></div>
+  </div>
+  
+</div>
   <div>
     <table class="table table-striped">
       <thead>
