updating routes on app.py

--- a/Scripts/templates/index.html
+++ b/Scripts/templates/index.html
@@ -25,15 +25,15 @@
       <a class="btn btn-primary btn-lg" href="vehicles" role="button">Vehicles</a>
     </p>
   </div>
-
+<!-- 
   <div>{% for name in star.name %}
       <p>{% for v in name %}
         {{v}}
         {% endfor %}
       </p>
     {% endfor %}
-  </div>
-  <!-- <div>{{star.name["0"]}}</div> -->
+  </div> -->
+  <div>{{star.name["0"]}}</div>
 
 
 
