updates to starship data analysis

--- a/Scripts/templates/starships.html
+++ b/Scripts/templates/starships.html
@@ -29,8 +29,7 @@
   </div>
 
 
-  <div class="container">
-    <div class="pieDiv">
+  <div id="scatter"></div>
 
 
 
@@ -56,6 +55,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
-  <script type="text/javascript" src="../static/js/starship.js"></script>
+  <script type="text/javascript" src="../static/js/starships_2.js"></script>
 </body>
 </html>
