updated starships js and html

--- a/Scripts/templates/starships.html
+++ b/Scripts/templates/starships.html
@@ -14,17 +14,17 @@
 <div class="container mt-4">
 
 
-  <div class="jumbotron text-center bg-info">
+  <div class="jumbotron text-center bg-warning">
     <h1 class="display-3">STARSHIPS</h1>
     <p class="lead text-left">After experiencing the whirlwind that has been the year 2020, our group has decided to search for an alternative home.  Through the examination of planets, species, and climates, as well as an analysis of spacecraft, we will determine the best place to relocate.
     </p>
     <hr class="my-2">
     <p>A Starship resource is a single transport craft that has hyperdrive capability.</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="/" role="button">Home</a>
-      <a class="btn btn-primary btn-lg" href="planets" role="button">Planets</a>
-      <a class="btn btn-primary btn-lg" href="species" role="button">Species</a>
-      <a class="btn btn-primary btn-lg" href="vehicles" role="button">Vehicles</a>
+      <a class="btn btn-secondary btn-lg" href="/" role="button">Home</a>
+      <a class="btn btn-secondary btn-lg" href="planets" role="button">Planets</a>
+      <a class="btn btn-secondary btn-lg" href="species" role="button">Species</a>
+      <a class="btn btn-secondary btn-lg" href="vehicles" role="button">Vehicles</a>
     </p>
   </div>
 
