changed button colors

--- a/Scripts/static/css/d3style.css
+++ b/Scripts/static/css/d3style.css
@@ -55,6 +55,10 @@
   .table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {
     background-color:lightblue;
  }
+
+ button{
+   background-color: lightblue;
+ }
  
   
   /* Mobile Rules */
@@ -73,3 +77,5 @@
       font-size: 13px;
     }
   }
+
+  
