--- a/Scripts/static/css/style.css
+++ b/Scripts/static/css/style.css
@@ -13,3 +13,19 @@
     /* Padding bottom by footer height */
     padding-bottom: 80px;
   }
+  
+  .tooltip {
+    position: absolute;
+    width: 135px;
+    height: 60px;
+    padding: 2px;
+    padding-top: 8px;
+    font: 12px sans-serif;
+    color: white;
+    text-align: center;
+    background: #ba9aeb;
+    border: 0;
+    border-radius: 10px;
+  }
+
+  
