--- a/Scripts/templates/planets.html
+++ b/Scripts/templates/planets.html
@@ -17,7 +17,7 @@
     <p class="lead text-left">After experiencing the whirlwind that has been the year 2020, our group has decided to search for an alternative home.  Through the examination of planets, species, and climates, as well as an analysis of spacecraft, we will determine the best place to relocate.
     </p>
     <hr class="my-2">
-    <p>This page displays the data of the different planets in the Star Wars universe</p>
+    <p>A Planet resource is a large mass, planet or planetoid in the Star Wars Universe, at the time of 0 ABY.</p>
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="/" role="button">Home</a>
       <a class="btn btn-primary btn-lg" href="species" role="button">Species</a>
