added home images

--- a/Scripts/templates/index.html
+++ b/Scripts/templates/index.html
@@ -26,6 +26,28 @@
     </p>
   </div>
 
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <img src="https://img1.looper.com/img/gallery/the-history-of-tatooine-fully-explained/intro-1598632525.jpg">
+      </div>
+      <div class="col">
+        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/veh-ia-1751-1576604159.jpg?crop=0.583xw:0.658xh;0.207xw,0.220xh&resize=640:*">
+      </div>
+      <div class="w-100"></div>
+      <div class="col">
+        <img src="https://bbts1.azureedge.net/images/p/full/2019/02/8054ee1f-d93b-4b96-99c7-cbdc88227bee.jpg">
+        
+      </div>
+      <div class="col">
+        <img src="https://www.seekpng.com/png/detail/485-4850307_picture-royalty-free-stock-chewbacca-vector-wookie-star.png">
+      </div>
+    </div>
+  </div>
+      
+
+  </div>
+
   <div>{% for name in star.name %}
       <p>{% for v in name %}
         {{v}}
