--- a/Scripts/templates/starships.html
+++ b/Scripts/templates/starships.html
@@ -6,15 +6,14 @@
   <title>Starships</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="../static/css/style.css">
+  <link rel="stylesheet" href="../static/css/d3Style.css">
 
 </head>
 
 <body>
 
-<div class="container mt-4">
 
-
-  <div class="jumbotron text-center bg-warning">
+  <div class="jumbotron text-center bg">
     <h1 class="display-3">STARSHIPS</h1>
     <p class="lead text-left">After experiencing the whirlwind that has been the year 2020, our group has decided to search for an alternative home.  Through the examination of planets, species, and climates, as well as an analysis of spacecraft, we will determine the best place to relocate.
     </p>
@@ -31,19 +30,22 @@
 
   <div id="scatter"></div>
 
-
-
-
-
-
-
-
-
-
-
-      
-    </div>
+  <div>
+    <button id="max_atmosphering_speed">Max Atmosphering Speed</button>
+    <button id="hyperdrive_rating">Hyperdrive Rating</button>
+    <button id="MGLT">MGLT</button>
+    <!-- <button id="passengers">Passengers</button> -->
+    <div class="bar"></div>
   </div>
+  
+</div>
+  <div>
+    <table class="table table-striped">
+      <thead>
+        <tr><th>Name</th><th>Model</th><th>Manufacturer</th><th>Cost in Credits</th></tr>
+      </thead>
+      <tbody></tbody>
+    </table>
   
 </div>
 
