--- a/Scripts/templates/starships.html
+++ b/Scripts/templates/starships.html
@@ -6,7 +6,7 @@
   <title>Starships</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="../static/css/style.css">
-  <link rel="stylesheet" href="../static/css/d3Style.css">
+  <link rel="stylesheet" href="../static/css/d3cssstyle-starships.css">
 
 </head>
 
@@ -20,21 +20,20 @@
     <hr class="my-2">
     <p>A Starship resource is a single transport craft that has hyperdrive capability.</p>
     <p class="lead">
-      <a class="btn btn-secondary btn-lg" href="/" role="button">Home</a>
-      <a class="btn btn-secondary btn-lg" href="planets" role="button">Planets</a>
-      <a class="btn btn-secondary btn-lg" href="species" role="button">Species</a>
-      <a class="btn btn-secondary btn-lg" href="vehicles" role="button">Vehicles</a>
+      <a class="btn btn-primary btn-lg" href="/" role="button">Home</a>
+      <a class="btn btn-primary btn-lg" href="planets" role="button">Planets</a>
+      <a class="btn btn-primary btn-lg" href="species" role="button">Species</a>
+      <a class="btn btn-primary btn-lg" href="vehicles" role="button">Vehicles</a>
     </p>
   </div>
 
 
   <div id="scatter"></div>
-
   <div>
-    <button id="max_atmosphering_speed">Max Atmosphering Speed</button>
-    <button id="hyperdrive_rating">Hyperdrive Rating</button>
-    <button id="MGLT">MGLT</button>
-    <!-- <button id="passengers">Passengers</button> -->
+    <button id="max">Max Atmosphering Speed</button>
+    <button id="hyperdrive">Hyperdrive Rating</button>
+    <button id="mglt">MGLT</button>
+    <button id="passengers">Passengers</button>
     <div class="bar"></div>
   </div>
   
@@ -42,7 +41,7 @@
   <div>
     <table class="table table-striped">
       <thead>
-        <tr><th>Name</th><th>Model</th><th>Manufacturer</th><th>Cost in Credits</th></tr>
+        <tr><th>Name</th><th>Model</th><th>Manufacturer</th><th>Cost in Credits (Galactic Credits)</th></tr>
       </thead>
       <tbody></tbody>
     </table>
