--- a/Scripts/templates/planets.html
+++ b/Scripts/templates/planets.html
@@ -6,7 +6,7 @@
   <title>Planets</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="../static/css/style.css">
-  <link rel="stylesheet" href="../static/css/d3Style.css">
+  <link rel="stylesheet" href="../static/css/d3style.css">
 
 </head>
 
