--- a/Scripts/templates/index.html
+++ b/Scripts/templates/index.html
@@ -55,6 +55,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script type="text/javascript" src="../static/js/starship.js"></script>
+  <script type="text/javascript" src="../static/js/test.js"></script>
 
 </body>
 </html>
