updated bargraphs in html

--- a/Scripts/static/css/d3cssstyle-starships.css
+++ b/Scripts/static/css/d3cssstyle-starships.css
@@ -53,7 +53,7 @@
   }
 
   .table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {
-    background-color:lightblue;
+    background-color:lightgreen;
  }
  
   
