--- a/Scripts/templates/species.html
+++ b/Scripts/templates/species.html
@@ -24,20 +24,17 @@
       <a class="btn btn-primary btn-lg" href="vehicles" role="button">Vehicles</a>
     </p>
   </div>
+
+</div>
   <div>
     <table class="table table-striped">
       <thead>
-        <tr>
-          <th>Name</th>
-          <th>Classification</th>
-          <th>Language</th>
-          <th>Average Height</th>
-          <th>Average Lifespan</th>
-        </tr>
+        <tr><th>Name</th><th>Classification</th><th>Language</th><th>Average Height</th><th>Average Lifespan</th></tr>
       </thead>
       <tbody></tbody>
     </table>
   </div>
+
 
 
 
