--- a/Scripts/templates/planets.html
+++ b/Scripts/templates/planets.html
@@ -13,11 +13,9 @@
 <body>
   <div class="page">
   <div class="jumbotron text-center">
-    <h1 class="display-3">Escaping 2020 on Earth</h1>
-    <p class="lead text-left">After experiencing the whirlwind that has been the year 2020, our group has decided to search for an alternative home.  Through the examination of planets, species, and climates, as well as an analysis of spacecraft, we will determine the best place to relocate.
+    <h1 class="display-3">Planets</h1>
+    <p class="lead text-center">A Planet resource is a large mass, planet or planetoid in the Star Wars Universe, at the time of 0 ABY.
     </p>
-    <hr class="my-2">
-    <p>A Planet resource is a large mass, planet or planetoid in the Star Wars Universe, at the time of 0 ABY.</p>
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="/" role="button">Home</a>
       <a class="btn btn-primary btn-lg" href="species" role="button">Species</a>
