--- a/Scripts/templates/vehicles.html
+++ b/Scripts/templates/vehicles.html
@@ -13,11 +13,9 @@
 <body>
 
   <div class="jumbotron text-center">
-    <h1 class="display-3">Escaping 2020 on Earth</h1>
-    <p class="lead text-left">After experiencing the whirlwind that has been the year 2020, our group has decided to search for an alternative home.  Through the examination of planets, species, and climates, as well as an analysis of spacecraft, we will determine the best place to relocate.
+    <h1 class="display-3">Vehicles</h1>
+    <p class="lead text-center">A Vehicle resource is a single transport craft that does not have hyperdrive capability.
     </p>
-    <hr class="my-2">
-    <p>A Vehicle resource is a single transport craft that does not have hyperdrive capability.</p>
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="/" role="button">Home</a>
       <a class="btn btn-primary btn-lg" href="planets" role="button">Planets</a>
